--- a/TP1/Ejercicios/ejercicio4.html
+++ b/TP1/Ejercicios/ejercicio4.html
@@ -1,41 +1,44 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<title>Template</title>
+			<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+			<title>Ejercicio 4</title>
 	</head>
+	<body>
 		<canvas id="canvas" width="900" height="600" style="border:#000 solid 1px;" />
-	</body>
-	<script>
-		  <!-- JavaScript code -->
-      // negro 0
-			// amarillo 255 255 0
-			//rojo 255 0 0
-			var ctx = document.getElementById("canvas").getContext("2d");
-			var width = 900;
-			var heigth = 600;
-			var imageData = ctx.createImageData(width, heigth);
-			var a = 255;
 
-			for(x=0; x<width/2; x++){
-				for(y=0; y<heigth; y++){
-					todos = Math.floor(x/width * 255) * 2;
-					setPixel(imageData,x,y,todos,todos,0,a);
+		<script lang="JavaScript">
+			  <!-- JavaScript code -->
+	      // negro 0 // amarillo 255 255 0 //rojo 255 0 0
+				var ctx = document.getElementById("canvas").getContext("2d");
+				var width = 900;
+				var heigth = 600;
+				var imageData = ctx.createImageData(width, heigth);
+				var a = 255;
+
+				for(x=0; x<width/2; x++){
+						for(y=0; y<heigth; y++){
+							todos = Math.floor(x/width * 255) * 2;
+							setPixel(imageData,x,y,todos,todos,0,a);
+						}
 				}
-			}
-			for(x=width/2; x<width; x++){
-				for(y=0; y<heigth; y++){
-					todos = (255-Math.floor(x/width * 255))*2;
-					setPixel(imageData,x,y,255,todos,0,a);
+
+				for(x=width/2; x<width; x++){
+						for(y=0; y<heigth; y++){
+							todos = (255-Math.floor(x/width * 255))*2;
+							setPixel(imageData,x,y,255,todos,0,a);
+						}
 				}
-			}
-			ctx.putImageData(imageData,0,0);
-		function setPixel(imageData,x,y,r,g,b,a){
-			res = (x + y * imageData.width) * 4;
-			imageData.data[res+0] = r;
-			imageData.data[res+1] = g;
-			imageData.data[res+2] = b;
-			imageData.data[res+3] = a;
-		}
-	</script>
+
+				ctx.putImageData(imageData,0,0);
+
+				function setPixel(imageData,x,y,r,g,b,a){
+						res = (x + y * imageData.width) * 4;
+						imageData.data[res+0] = r;
+						imageData.data[res+1] = g;
+						imageData.data[res+2] = b;
+						imageData.data[res+3] = a;
+					}
+		</script>
+		</body>
 </html>
