Mas detalles de la Entrega del ejercicio final, practico 1

--- a/TP1/EntregaFinal/index.html
+++ b/TP1/EntregaFinal/index.html
@@ -67,7 +67,7 @@
         </div>
     </div>
 </div>
-<footer class="container">
+<footer>
     <h2>Alumno: Eduardo Bravo. Interfaces de usuario e Interacción 2017. Entrega Especial. Práctico 1</h2>
 </footer>
 <!-- Latest compiled and minified JavaScript -->
