--- a/TP2/EntregaFinal/index.html
+++ b/TP2/EntregaFinal/index.html
@@ -2,23 +2,49 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<title>HANOI</title>
-  </head>
+		<title>The Hanoi's Towers Game</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/hanoi.css">
+	</head>
   <body>
+    <div class="container">
+      <div class="row">
+          <div class="col-md-12"><h1>Hanoi Tower Game</h1></div>
+      </div>
+      <div class="row">
+        <div class="col-md-10">
+		        <canvas id="canvas" width="900" height="600" style="border:#000 solid 1px;"></canvas>
+        </div>
+        <div class="col-md-2">
+          <h3>New Game</h3>
+          <div class="btn-group-vertical " role="group" aria-label="...">
+            <div class="btn-group" role="group">
+                <button type="button" class="btn btn-default" onclick="jugar(1);">Test</button>
+            </div>
+              <div class="btn-group" role="group">
+                  <button type="button" class="btn btn-default" onclick="jugar(4);">Easy</button>
+              </div>
+              <div class="btn-group" role="group">
+                  <button type="button" class="btn btn-default" onclick="jugar(6);">Medium</button>
+              </div>
+              <div class="btn-group" role="group">
+                  <button type="button" class="btn btn-default" onclick="jugar(8);">Hard</button>
+            </div>
+          </div>
+          <h3>Information</h3>
+          <p class="alert alert-success">Moves: <span id="moves" class="badge">0</span></p>
+          <p class="alert alert-warning">Best: <span id="best">0</span></p>
+        </div>
+      </div>
+      <div class="row">
+          <div class="col-md-12 text-center">2017 - Hanoi's Towers Game - Interfaces de usuario e Interacción - Marcelo Prado</div>
+      </div>
+    </div>
 
-    <a href="#" onclick="jugar(4)">Facil</a>
-    <a href="#" onclick="jugar(6)">Intermedi</a>
-    <a href="#" onclick="jugar(8)">Dificil</a>
-    <br>
-		<canvas id="canvas" width="1000" height="500" style="border:#000 solid 1px;" />
+    <script src="js/disco.js"></script>
+    <script src="js/torre.js"></script>
+    <script src="js/hanoi.js"></script>
+    <script src="js/main.js"></script>
 
-
-    <script src="disco.js"></script>
-    <script src="torre.js"></script>
-    <script src="hanoi.js"></script>
-    <script src="main.js"></script>
-
-
-
-</body>
+	</body>
 </html>
