mejoras en la logica, juego funcionando correctmente

--- a/TP2/EntregaFinal/index.html
+++ b/TP2/EntregaFinal/index.html
@@ -16,7 +16,7 @@
 		        <canvas id="canvas" width="900" height="600" style="border:#000 solid 1px;"></canvas>
         </div>
         <div class="col-md-2">
-          <h3>New Game</h3>
+          <h3>Levels</h3>
           <div class="btn-group-vertical " role="group" aria-label="...">
             <div class="btn-group" role="group">
                 <button type="button" class="btn btn-default" onclick="jugar(1);">Test</button>
@@ -36,8 +36,8 @@
           <p class="alert alert-warning">Best: <span id="best">0</span></p>
         </div>
       </div>
-      <div class="row">
-          <div class="col-md-12 text-center">2017 - Hanoi's Towers Game - Interfaces de usuario e Interacción - Marcelo Prado</div>
+      <div class="footer">
+          <div class="col-md-12">Hanoi's Towers Game - Interfaces de usuario e Interacción - Bravo Eduardo</div>
       </div>
     </div>
 
