mensajes de exito y error terminados - trabajo terminado

--- a/TP2/EntregaFinal/index.html
+++ b/TP2/EntregaFinal/index.html
@@ -9,7 +9,9 @@
   <body>
     <div class="container">
       <div class="row">
-          <div class="col-md-12"><h1>Hanoi Tower Game</h1></div>
+          <div class="col-md-5"><h1>Hanoi Tower Game</h1></div>
+					<div class="col-md-5"><p class="alert" id="msj"></p></div>
+					<div class="col-md-2"></div>
       </div>
       <div class="row">
         <div class="col-md-10">
@@ -34,6 +36,7 @@
           <h3>Information</h3>
           <p class="alert alert-success">Moves: <span id="moves" class="badge">0</span></p>
           <p class="alert alert-warning">Best: <span id="best">0</span></p>
+
         </div>
       </div>
       <div class="footer">
