animacion del caminante ejercicio 4

--- a/TP4/eje3/reloj.html
+++ b/TP4/eje3/reloj.html
@@ -22,11 +22,13 @@
     <li>11</li>
   </ul>
 
-<div id="hora"></div>
+<div id="hora"><div></div></div>
 
-<div id="minuto"></div>
+<div id="minuto"><div></div></div>
 
-<div id="segundo"></div>
+<div id="segundo"><div></div></div>
+
+<div id="centro"></div>
 
 </div>
 
