--- a/TP4/EntregaFinal/juego.html
+++ b/TP4/EntregaFinal/juego.html
@@ -2,27 +2,49 @@
 
 
 <head>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 <link rel="stylesheet" href="css/keyframes.css">
 <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-<header>
-  <nav>
-    <ul>
-      <li>Libes</li>
-      <li>Time</li>
-      <li>Best</li>
-      <li>Controls</li>
-    </ul>
-  <nav>
+   <div class="nubes">
+      <div class="montanias">
+         <div class="arboles">
+            <div class="piso">
 
-</header>
-<main>
-  <div class="runner"></div>
-<main>
-<footer></footer>
+            <header>
+              <nav>
+                 <ul class="nav justify-content-center">
+                   <li class="nav-item">
+                     <a class="nav-link" href="#">Libes</a>
+                   </li>
+                   <li class="nav-item">
+                     <a class="nav-link" href="#">Time</a>
+                   </li>
+                   <li class="nav-item">
+                     <a class="nav-link" href="#">Best</a>
+                   </li>
+                   <li class="nav-item">
+                     <a class="nav-link" href="#">Controls</a>
+                   </li>
+                  </ul>
+              <nav>
+            </header>
+            <main>
+               <div class="runner"></div>
+            <main>
+            <footer></footer>
 
-<script src="js/juego.js" type="javascript" ></script>
+         </div>
+      </div>
+   </div>
+</div>
+
+<script src="js/game.js" type="javascript" ></script>
+<script src="js/player.js" type="javascript" ></script>
+<script src="js/moves.js" type="javascript" ></script>
+<script src="js/enemy.js" type="javascript" ></script>
 
 </body>
 </html>
