--- a/TP4/EntregaFinal/juego.html
+++ b/TP4/EntregaFinal/juego.html
@@ -5,6 +5,11 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 <link rel="stylesheet" href="css/keyframes.css">
 <link rel="stylesheet" href="css/style.css">
+<script src="js/game.js" type="javascript" ></script>
+<script src="js/player.js" type="javascript" ></script>
+<script src="js/moves.js" type="javascript" ></script>
+<script src="js/enemy.js" type="javascript" ></script>
+
 </head>
 
 <body>
@@ -32,7 +37,7 @@
               <nav>
             </header>
             <main>
-               <div class="runner"></div>
+               <div id="runner"></div>
             <main>
             <footer></footer>
 
@@ -40,11 +45,6 @@
       </div>
    </div>
 </div>
-
-<script src="js/game.js" type="javascript" ></script>
-<script src="js/player.js" type="javascript" ></script>
-<script src="js/moves.js" type="javascript" ></script>
-<script src="js/enemy.js" type="javascript" ></script>
 
 </body>
 </html>
