--- a/TP4/EntregaFinal/juego.html
+++ b/TP4/EntregaFinal/juego.html
@@ -12,11 +12,11 @@
 
 </head>
 
-<body>
-   <div class="nubes">
-      <div class="montanias">
-         <div class="arboles">
-            <div class="piso">
+<body id="body">
+   <div class="nubes" id="nubes">
+      <div class="montanias" id="montanias">
+         <div class="arboles" id="arboles">
+            <div class="piso" id="piso">
 
             <header>
               <nav>
@@ -41,7 +41,7 @@
             </header>
 
             <main id="pantalla">
-               <div id="runner"></div>
+               <div id="runner" class="runner-stop"></div>
 
                <div class="enemy" id="0"></div>
                <div class="enemy" id="1"></div>
