mensaje de gameover

--- a/TP4/EntregaFinal/juego.html
+++ b/TP4/EntregaFinal/juego.html
@@ -17,7 +17,9 @@
       <div class="montanias" id="montanias">
          <div class="arboles" id="arboles">
             <div class="piso" id="piso">
-
+            <div class="gameOver" id="popUp">
+               <img src="http://pluspng.com/img-png/restart-png-size-512.png" width="200" title="Restart" onclick="jugarNew()" />
+            </div>
             <header>
               <nav>
                  <ul class="nav justify-content-center">
@@ -57,12 +59,11 @@
       </div>
    </div>
 </div>
-
 <script type="text/javascript" src="js/player.js"></script>
-    <script type="text/javascript" src="js/enemy.js"></script>
-    <script type="text/javascript" src="js/game.js"></script>
-    <script type="text/javascript" src="js/moves.js"></script>
-    <script type="text/javascript" src="js/main.js"></script>
+<script type="text/javascript" src="js/enemy.js"></script>
+<script type="text/javascript" src="js/game.js"></script>
+<script type="text/javascript" src="js/moves.js"></script>
+<script type="text/javascript" src="js/main.js"></script>
 
 </body>
 </html>
