--- a/TP4/EntregaFinal/index.html
+++ b/TP4/EntregaFinal/index.html
@@ -10,7 +10,7 @@
    <link rel="stylesheet" href="css/player.css">
    <link rel="stylesheet" href="css/enemy.css">
    <link rel="icon" href="favicon.ico" type="image/x-icon"/>
-   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>   
+   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
 </head>
 
 <body id="body">
@@ -26,7 +26,7 @@
                   <li class="nav-item"><a class="nav-link" onclick="jugarNew(01,30,7)" href="#" >Difficult</a></li>
                </ul>
             </div>
-            <div class="controles" id="control" style="visibility: hidden;"></div>
+            <div class="controles" id="control" style="visibility: block;"></div>
             <header>
               <nav>
                  <ul class="nav justify-content-center">
